# serde_apply

./: README.md
crates/apply/: Cargo.toml
crates/apply/examples/: simple.rs
crates/apply/src/: impls.rs  lib.rs
crates/macros/: Cargo.toml
crates/macros/src/: lib.rs
