[package]
name = "serde_apply"
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Simon Rasmussen <zetlon+crates.io@gmail.com>"]
description = "Partially deserialize and update your struct"
readme = "../../README.md"
homepage = "https://github.com/Zagitta/serde_apply"
repository = "https://github.com/Zagitta/serde_apply"
documentation = "https://docs.rs/serde_apply"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_apply_macros = { path = "../macros", version = "0.1" }
serde = { version = "1" }

[dev-dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1" }
serde_path_to_error = "0.1"
