[package]
name = "serde_apply_macros"
version = "0.1.1"
edition = "2021"
license = "MIT"
authors = ["Simon Rasmussen <zetlon+crates.io@gmail.com>"]
description = "Derive macro for serde_apply"
readme = "../../README.md"
homepage = "https://github.com/Zagitta/serde_apply"
repository = "https://github.com/Zagitta/serde_apply"
documentation = "https://docs.rs/serde_apply"

[lib]
proc-macro = true

[dependencies]
syn = "1"
quote = "1"
proc-macro2 = "1"
